chore: add comments to functions and remove litter

--- a/index.html
+++ b/index.html
@@ -263,13 +263,33 @@
         <div class="upload__column">
           <h3 class="upload__heading">Recipe data</h3>
           <label>Title</label>
-          <input value="TEST0" required name="title" type="text" />
+          <input
+            placeholder="Format: Requires at least 5 characters"
+            required
+            name="title"
+            type="text"
+          />
           <label>URL</label>
-          <input value="TEST1" required name="sourceUrl" type="text" />
+          <input
+            placeholder="Format: Requires at least 5 characters"
+            required
+            name="sourceUrl"
+            type="text"
+          />
           <label>Image URL</label>
-          <input value="TEST2" required name="image" type="text" />
+          <input
+            placeholder="Format: Requires at least 5 characters"
+            required
+            name="image"
+            type="text"
+          />
           <label>Publisher</label>
-          <input value="TEST3" required name="publisher" type="text" />
+          <input
+            placeholder="Format: Requires at least 5 characters"
+            required
+            name="publisher"
+            type="text"
+          />
           <label>Prep time</label>
           <input value="23" required name="cookingTime" type="number" />
           <label>Servings</label>
@@ -280,7 +300,6 @@
           <h3 class="upload__heading">Ingredients</h3>
           <label>Ingredient 1</label>
           <input
-            value="0.5,kg,Rice"
             type="text"
             required
             name="ingredient-1"
@@ -288,14 +307,12 @@
           />
           <label>Ingredient 2</label>
           <input
-            value="1,,Avocado"
             type="text"
             name="ingredient-2"
             placeholder="Format: 'Quantity,Unit,Description'"
           />
           <label>Ingredient 3</label>
           <input
-            value=",,salt"
             type="text"
             name="ingredient-3"
             placeholder="Format: 'Quantity,Unit,Description'"
